# GenerativeBackend

./: Dockerfile  LICENSE.md  README.md  README_dev.md  README_template.md  docker-compose.yml  pyproject.toml
src/: .env.example
src/app/: main.py
src/app/api/: dependencies.py
src/app/api/v1/: __init__.py  agent.py  customer.py  rate_limits.py  review.py  tiers.py  tour.py  waiting_cutomer.py
src/app/core/: config.py  schemas.py  setup.py  timezone.py
src/app/core/db/: models.py
src/app/core/exceptions/: http_exceptions.py
src/app/core/utils/: cache.py  rate_limit.py
src/app/core/utils/ML_Assets/: core_object.py  define_device.py  init_vector_db.py
src/app/core/utils/business/: promts.py  speech_to_text.py  text_to_speech.py  text_to_text.py
src/app/core/worker/: functions.py  settings.py
src/app/crud/: crud_agent.py  crud_customer.py  crud_customers_waiting_tour.py  crud_rate_limit.py  crud_review.py  crud_tier.py  crud_tour.py  crud_waiting_customers.py
src/app/models/: agent.py  customer.py  customers_waiting_tour.py  rate_limit.py  review.py  tier.py  tour.py  waiting_customers.py
src/app/schemas/: agent.py  audio_generation.py  customer.py  customers_waiting_tour.py  review.py  tour.py  waiting_customers.py
src/migrations/: env.py
src/scripts/: create_first_superagent.py
